--- a/composer.json
+++ b/composer.json
@@ -24,17 +24,19 @@
         }
     ],
     "require": {
-        "php" : "^8.1"
+        "php": "^8.1",
+        "psr/log": "^3.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.75.0",
+        "monolog/monolog": "^3.9",
         "phpstan/phpstan": "^2.1.17",
-        "phpstan/phpstan-strict-rules": "^2.0.4",
-        "phpstan/phpstan-phpunit": "^2.0.6",
         "phpstan/phpstan-deprecation-rules": "^2.0.3",
+        "phpstan/phpstan-phpunit": "^2.0.6",
+        "phpstan/phpstan-strict-rules": "^2.0.4",
         "phpunit/phpunit": "^10.5.15 || ^11.5.22",
-        "symfony/var-dumper": "^6.4.21 || ^v7.3.0",
-        "symfony/console": "^6.4 || ^7.0"
+        "symfony/console": "^6.4 || ^7.0",
+        "symfony/var-dumper": "^6.4.21 || ^v7.3.0"
     },
     "autoload": {
         "psr-4": {
