--- a/composer.json
+++ b/composer.json
@@ -30,16 +30,16 @@
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.75.0",
         "monolog/monolog": "^3.9",
-        "nyholm/psr7": "^1.8",
-        "open-telemetry/exporter-otlp": "^1.3",
+        "nyholm/psr7": "^1.8.2",
+        "open-telemetry/exporter-otlp": "^1.3.2",
         "phpstan/phpstan": "^2.1.17",
         "phpstan/phpstan-deprecation-rules": "^2.0.3",
         "phpstan/phpstan-phpunit": "^2.0.6",
         "phpstan/phpstan-strict-rules": "^2.0.4",
-        "phpunit/phpunit": "^10.5.15 || ^11.5.22",
-        "symfony/console": "^6.4 || ^7.0",
-        "symfony/http-client": "^v6.4.19 || ^v7.3.0",
-        "symfony/var-dumper": "^6.4.21 || ^v7.3.0"
+        "phpunit/phpunit": "^10.5.15 || ^11.5.25",
+        "symfony/console": "^6.4 || ^7.3.1",
+        "symfony/http-client": "^v6.4.19 || ^7.3.1",
+        "symfony/var-dumper": "^6.4.21 || ^7.3.1"
     },
     "autoload": {
         "psr-4": {
@@ -66,6 +66,7 @@
         "test": "Runs all tests"
     },
     "suggest": {
+        "psr/log": "to log the profiling process",
         "symfony/console": "to render the profiler in your CLI command",
         "open-telemetry/exporter-otlp": "to export the profiler results to an opentelemetry profile"
     },
