--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
         "phpstan/phpstan-deprecation-rules": "^2.0.3",
         "phpstan/phpstan-phpunit": "^2.0.6",
         "phpstan/phpstan-strict-rules": "^2.0.4",
-        "phpunit/phpunit": "^10.5.15 || ^11.5.25",
+        "phpunit/phpunit": "^10.5.15 || ^11.5.25 || ^12.2.5",
         "symfony/console": "^6.4 || ^7.3.1",
         "symfony/http-client": "^v6.4.19 || ^7.3.1",
         "symfony/var-dumper": "^6.4.21 || ^7.3.1"
