--- a/.gitattributes
+++ b/.gitattributes
@@ -13,3 +13,4 @@ README.md          export-ignore
 **/*Test.php       export-ignore
 **/*TestCase.php   export-ignore
 examples           export-ignore
+benchmark          export-ignore
