--- a/phpstan.neon
+++ b/phpstan.neon
@@ -7,6 +7,7 @@ parameters:
     level: max
     paths:
         - src
+        - benchmark
     ignoreErrors:
     reportUnmatchedIgnoredErrors: true
     treatPhpDocTypesAsCertain: false
