Adding Profiler::statistics static methods

--- a/composer.json
+++ b/composer.json
@@ -47,8 +47,7 @@
     },
     "autoload-dev": {
         "files": [
-            "benchmark/Benchmark.php",
-            "benchmark/Statistics.php"
+            "benchmark/Benchmark.php"
         ]
     },
     "scripts": {
