Introduce the Report class

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -9,5 +9,7 @@ parameters:
         - src
         - benchmark
     ignoreErrors:
+        - identifier: offsetAccess.notFound
+        - identifier: offsetAccess.nonOffsetAccessible
     reportUnmatchedIgnoredErrors: true
     treatPhpDocTypesAsCertain: false
