--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "bakame/aide-profiler",
+    "name": "bakame/stackwatch",
     "description": "A minimalist, embeddable, multi-metric, and framework-agnostic profiler for PHP",
     "keywords": ["profiler", "microtime", "cpu", "memory_usage", "embeddable", "multi-metric", "hrtime", "stopwatch"],
     "license": "MIT",
@@ -12,10 +12,10 @@
         }
     ],
     "support": {
-        "docs": "https://github.com/bakame-php/aide-profiler",
-        "issues": "https://github.com/bakame-php/aide-profiler/issues",
-        "rss": "https://github.com/bakame-php/aide-profiler/releases.atom",
-        "source": "https://github.com/bakame-php/aide-profiler"
+        "docs": "https://github.com/bakame-php/stackwatch",
+        "issues": "https://github.com/bakame-php/stackwatch/issues",
+        "rss": "https://github.com/bakame-php/stackwatch/releases.atom",
+        "source": "https://github.com/bakame-php/stackwatch"
     },
     "funding": [
         {
@@ -24,25 +24,26 @@
         }
     ],
     "require": {
-        "php": "^8.1"
+        "php": "^8.1",
+        "symfony/console": "^6.4 || ^7.3.2",
+        "psr/log": "^3.0.2"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.75.0",
+        "friendsofphp/php-cs-fixer": "^3.85.1",
         "monolog/monolog": "^3.9",
         "nyholm/psr7": "^1.8.2",
         "open-telemetry/exporter-otlp": "^1.3.2",
-        "phpstan/phpstan": "^2.1.17",
+        "phpstan/phpstan": "^2.1.21",
         "phpstan/phpstan-deprecation-rules": "^2.0.3",
-        "phpstan/phpstan-phpunit": "^2.0.6",
-        "phpstan/phpstan-strict-rules": "^2.0.4",
-        "phpunit/phpunit": "^10.5.15 || ^11.5.25 || ^12.2.5",
-        "symfony/console": "^6.4 || ^7.3.1",
-        "symfony/http-client": "^v6.4.19 || ^7.3.1",
-        "symfony/var-dumper": "^6.4.21 || ^7.3.1"
+        "phpstan/phpstan-phpunit": "^2.0.7",
+        "phpstan/phpstan-strict-rules": "^2.0.6",
+        "phpunit/phpunit": "^10.5.15 || ^11.5.25 || ^12.2.9",
+        "symfony/http-client": "^v6.4.19 || ^7.3.2",
+        "symfony/var-dumper": "^6.4.21 || ^7.3.2"
     },
     "autoload": {
         "psr-4": {
-            "Bakame\\Aide\\Profiler\\": "src"
+            "Bakame\\Stackwatch\\": "src"
         }
     },
     "autoload-dev": {
@@ -73,8 +74,6 @@
         "test": "Runs all tests"
     },
     "suggest": {
-        "psr/log": "to log the profiling process",
-        "symfony/console": "to use the CLI command",
         "open-telemetry/exporter-otlp": "to export the profiler results to an opentelemetry compatible server"
     },
     "extra": {
