--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,9 @@
     ],
     "require": {
         "php": "^8.1",
+        "psr/log": "^3.0.2",
         "symfony/console": "^6.4 || ^7.3.2",
-        "psr/log": "^3.0.2"
+        "symfony/process": "^7.3"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.85.1",
