--- a/docs/_data/menu.yml
+++ b/docs/_data/menu.yml
@@ -3,8 +3,8 @@ version:
         Getting Started:
             Installation: '/1.0/'
         Documentation:
+            Stack: '/1.0/stack/'
             Profiler: '/1.0/profiler/'
-            Span Aggregator: '/1.0/span-aggregator/'
             Timeline: '/1.0/timeline/'
             CLI command: '/1.0/command/'
             Exporters: '/1.0/exporters/'
