--- a/composer.json
+++ b/composer.json
@@ -26,21 +26,21 @@
     "require": {
         "php": "^8.1",
         "psr/log": "^3.0.2",
-        "symfony/console": "^6.4 || ^7.3.2",
-        "symfony/process": "^6.4 || ^7.3"
+        "symfony/console": "^6.4 || ^7.4.4 || ^v8.0",
+        "symfony/process": "^6.4 || ^7.4.5 || ^v8.0"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.85.1",
-        "monolog/monolog": "^3.9",
+        "friendsofphp/php-cs-fixer": "^3.93.1",
+        "monolog/monolog": "^3.10",
         "nyholm/psr7": "^1.8.2",
-        "open-telemetry/exporter-otlp": "^1.3.2",
-        "phpstan/phpstan": "^2.1.21",
+        "open-telemetry/exporter-otlp": "^1.3.4",
+        "phpstan/phpstan": "^2.1.38",
         "phpstan/phpstan-deprecation-rules": "^2.0.3",
-        "phpstan/phpstan-phpunit": "^2.0.7",
-        "phpstan/phpstan-strict-rules": "^2.0.6",
-        "phpunit/phpunit": "^10.5.15 || ^11.5.25 || ^12.2.9",
-        "symfony/http-client": "^v6.4.19 || ^7.3.2",
-        "symfony/var-dumper": "^6.4.21 || ^7.3.2"
+        "phpstan/phpstan-phpunit": "^2.0.12",
+        "phpstan/phpstan-strict-rules": "^2.0.8",
+        "phpunit/phpunit": "^10.5.15 || ^11.5.25 || ^12.5.9",
+        "symfony/http-client": "^v6.4.19 || ^7.4.5 || ^v8.0",
+        "symfony/var-dumper": "^6.4.21 || ^7.4.4 || ^v8.0"
     },
     "autoload": {
         "psr-4": {
